--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,12 @@ msgidd 0.1
 ------------
 
 ----- cvs ci ------
+Wed Oct 27 19:42:10 CEST 1999
+mtt:
+* added creation of msgids in the client, when no server is available
+
+
+----- cvs ci ------
 Wed Oct 27 19:06:46 CEST 1999
 mtt:
 * added host parameter to java client
