--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,33 @@
-msgidd 0.1
+msgidd 0.2
 ------------
 
------ cvs ci ------
-Wed Oct 27 19:42:10 CEST 1999
-mtt:
-* added creation of msgids in the client, when no server is available
-
-
------ cvs ci ------
-Wed Oct 27 19:06:46 CEST 1999
-mtt:
-* added host parameter to java client
+----------------------------
+2005/09/08 18:07:28;  author: stas_degteff;
+Now msgidd store MSGID after each generation. Also compiler warnings is fixed.
+----------------------------
+2005/09/08 17:55:34;  author: stas_degteff;
+Documents a MSGID daemon and clients. (Create a README.)
+----------------------------
+2000/09/13 18:28:26;  author: sms;
+renamed makefile to Makefile
+----------------------------
+2000/09/13 18:28:08;  author: sms;
+changed default target to all
+----------------------------
+2000/02/21 14:34:08;  author: mt;
+removed msgid file
+----------------------------
+2000/02/19 12:13:33;  author: sms;
+changed format of msgid-file to decimal
+----------------------------
+1999/10/27 19:42:10;  author: mt;
+added creation of msgids in the client, when no server is available
+----------------------------
+1999/10/27 17:25:44;  author: mt;
+host parameter added to java client
+----------------------------
+1999/10/25 11:03:43;  author: mt;
+added java client
+----------------------------
+1999/10/25 09:05:37;  author: mt;
+created makefile
