--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Msgidd - a Message ID daemon.
 
 This is a part of the HUSKY portable fidonet software project.
-
+Msgidd don't supported after 2005 year, but you may develop this.
 
 I. Introduction.
 
